--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "node-receive-a-message-tutorial",
   "version": "1.0.0",
+  "scripts": {
+    "start": "node sms-hello-world.js"
+  },
   "dependencies": {
-    "@freeclimb/sdk": "^1.0.0",
+    "@freeclimb/sdk": "^3.3.0",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3"
   }
 }
