Update .env.sample with special character instructions

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # Configure Environment Variables and rename this file to .env
 ACCOUNT_ID=
 API_KEY=
-
+# Remove special characters copied from the dashboard, such as spaces, dashes, and parens
 FREECLIMB_NUMBER=+1
